TEST_PROGRAMS/INVALID/04/103.go
package main

func main() {
    // Unsupported fallthrough statement in golite
    fallthrough
}
